# IBKR-API-Go-Python

./: .editorconfig  .env  .gitattributes  .gitignore  .pre-commit-config.yaml  CONFIGURATION.md  ComprehensiveImplementationPlanAutoVerticalSpreadTrader.md  DEPLOYMENT.md  DEVELOPER_GUIDE.md  LICENSE  README.md  app.go  app_test.go  config.yaml  config.yaml.example  docker-compose.prod.yml  docker-compose.yml  fix-specific-files.ps1  fix-tws-connection.bat  fix-whitespace.ps1  fix-whitespace.sh  fix_endings.py  fix_file_endings.py  go.mod  go.sum  how-to-use-with-TWS.md  install-deps.ps1  main.go  mypy.ini  past-issues.md  plan.md  pyproject.toml  requirements.txt  run-compose.ps1  run-compose.sh  run-local.ps1  run-local.sh  setup-dev.ps1  temp_pyproject.toml  test-output.ps1  (+3 more)
TraderAdmin/: README.md  README_MONITORING.md  README_SCHEDULING.md  app.go  go.mod  go.sum  test_config_reload.ps1
build_scripts/: README.md  build_unix.sh  (+2 more)
python/: .coveragerc  DOCKER_SHORT_DESCRIPTION.txt  Dockerfile  Dockerfile.dev  README.docker.md  README.md  analyze-imports.py  check-trader.bat  config.yaml  conftest.py  fix-all.ps1  fix-env.ps1  fix-imports.py  mypy-custom.ini  mypy-fix.ini  mypy.ini  pyproject.toml  pytest.ini  quick-fix.ps1  run-mypy.ps1  run_mypy.ps1  setup.py  symbols.txt  test_imports.py
python/config/: config.yaml
python/ibkr_trader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
python/orchestrator/: Dockerfile  config_watcher.py  health.py  requirements.txt
python/scripts/: fix_file_endings.py  yaml_to_toml.py
python/src/: __init__.py  py.typed  run_trader.py
python/src/app/: __init__.py  alerts.py  backtest_engine.py  config.py  main.py  orchestrator.py  scanner.py  scanner_client.py  scheduler.py  trader.py
python/src/app/stubs/: backtest_engine.pyi
python/src/backtesting/: __init__.py  backtest_engine.py
python/src/brokers/: __init__.py  ibkr_api.py  ibkr_ib_insync.py
python/src/config/: __init__.py  config.py
python/src/data/: __init__.py  data_manager.py
python/src/models/: __init__.py  option.py
python/src/options/: __init__.py  spread_filter.py  spread_manager.py
python/src/scripts/: run_backtest.py  run_scan.py
python/src/strategies/: __init__.py  base_strategy.py  bear_rally_strategy.py  bull_pullback_strategy.py  high_base_strategy.py  low_base_strategy.py  strategy_factory.py
python/src/trading/: __init__.py  exit_strategy.py  option_selector.py  risk_manager.py  trade_executor.py  trader.py
python/src/utils/: __init__.py  alert_system.py  error_handler.py  logger.py  performance_monitor.py  time_utils.py
python/tests/: __init__.py  test_ibkr_connection.py  test_ibkr_ib_insync_setup.py  test_ibkr_market_data.py  test_placeholder.py
python/tests/features/: connection.feature  market_data.feature  setup.feature
python/tests/integration/: __init__.py  test_integration_placeholder.py
python/tests/unit/: __init__.py  test_ibkr_connection.py  test_ibkr_ib_insync_setup.py
(+209 files in other folders)
